# scipion-em-repic

./: .gitignore  CHANGES.txt  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: publish_and_tag.yml
repic/: __init__.py  bibtex.py  constants.py  protocols.conf
repic/protocols/: __init__.py  protocol_repic.py  protocol_repic_tomo.py
repic/tests/: protocol_repic.py  test_protocol_repic.py
