[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-repic"
dynamic = ["version"]
description = "Plugin to use REPIC within the Scipion framework"
authors = [
    {name = "Scipion Team", email = "scipion@cnb.csic.es"}
]
dependencies = [
]
requires-python = ">=3.8"
readme = "README.rst"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
keywords = ["scipion", "cryoem", "spa", "picking", "imageprocessing", "scipion-3.0"]

[project.urls]
Homepage = "https://github.com/scipion-em/scipion-em-repic"
Repository = "https://github.com/scipion-em/scipion-em-repic"
Issues = "https://github.com/scipion-em/scipion-em-repic/issues"

[tool.setuptools.package-data]
"repic" = ["protocols.conf", "icon.png"]

[tool.setuptools.dynamic]
version = {attr = "repic.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.entry-points."pyworkflow.plugin"]
repic = "repic"